...
        android:layout_marginLeft="16dp"
        android:text="Availability :"
        android:textSize="24dp"
        />

    <TextView
        android:id="@+id/message_marker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/availability_marker"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="16dp"
        android:text="Message :"
        android:textSize="24dp"
        />

    <TextView
        android:id="@+id/name_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/view_profile_header"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@id/name_marker"
        android:layout_marginLeft="16dp"
        android:text=""
        android:textSize="24dp"
        />

    <TextView
        android:id="@+id/company_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/name_marker"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@id/company_marker"
        android:layout_marginLeft="16dp"
        android:text=""
        android:textSize="24dp"
        />

    <TextView
        android:id="@+id/position_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/company_marker"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@id/position_marker"
        android:layout_marginLeft="16dp"
...
        android:layout_marginLeft="16dp"
        android:text=""
        android:textSize="24dp"
        />

    <TextView
        android:id="@+id/availability_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/yoe_marker"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@id/availability_marker"
        android:layout_marginLeft="16dp"
...
