...
    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_contacts_black_24dp"
        android:title="@string/title_mentors" />

    <item
        android:id="@+id/navigation_scout"
        android:icon="@drawable/ic_person_add_black_24dp"
        android:title="@string/title_scout" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/title_settings" />

</menu>

